k8s/product-service/service-product.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-product
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
