k8s/product-service/ingress-product.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api/product(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-product
                port:
                  number: 80
